--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 				</div>
 			</div>
 		<div id="hi" style="width:100%;text-align:center;font-size:24px;font-weight:bold;">
-			学生学号：250250250<br>
-			学生姓名&nbsp;：吴佳蕾大傻逼<br>
+			学生学号：220103480107<br>
+			学生姓名&nbsp;：肖键皓<br>
 		</div>
 		
 		
